--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "npm": "^6.4.1",
     "papaparse": "^4.6.1",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-select": "^2.1.1"
   },
   "devDependencies": {
     "css-loader": "^0.28.10",
