--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "chart.js": "^2.7.3",
     "e": "0.0.4",
     "install": "^0.12.2",
+    "lodash": "^4.17.11",
     "npm": "^6.4.1",
     "papaparse": "^4.6.1",
     "react": "^16.2.0",
