--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
-  "name": "SumUp",
+  "name": "Exoplanet_Data_Explorer",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack --watch --mode development",
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production"
-  },
+  "main": "bundle.js",
+  "scripts": { "start": "node ./serverhost.js" },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -17,8 +13,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "chart.js": "^2.7.3",
-    "e": "0.0.4",
-    "install": "^0.12.2",
+    "express": "^4.16.4",
     "lodash": "^4.17.11",
     "npm": "^6.4.1",
     "papaparse": "^4.6.1",
@@ -27,12 +22,15 @@
     "react-select": "^2.1.1"
   },
   "devDependencies": {
+    "body-parser": "^1.18.3",
     "css-loader": "^0.28.10",
     "csv-loader": "^3.0.2",
     "node-sass": "^4.7.2",
+    "path": "^0.12.7",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.2",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.10"
+    "webpack": "^4.23.1",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-middleware": "^3.4.0"
   }
 }
