--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "bundle.js",
   "scripts": {
-    "start": "if test \"$NODE_ENV\" = \"production\"; then node ./bundle.js; else node./serverhost.js"
-    "start": "node ./serverhost.js"
+    "start": "if test \"$NODE_ENV\" = \"production\"; then node ./bundle.js; else node./serverhost.js",
+    "heroku-postbuild": "npm run prod:build-client && npm run prod:build-server"
   },
   "author": "",
   "license": "ISC",
