--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "chart.js": "^2.7.3",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
     "npm": "^6.4.1",
