--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   },
   "main": "bundle.js",
   "scripts": {
-    "start": "if test \"$NODE_ENV\" = \"production\"; then node ./bundle.js; else node ./serverhost.js; fi",
-    "prod:build-client": "NODE_ENV=production ./node_modules/.bin/webpack --config=webpack.config.js -p",
-    "heroku-postbuild": "npm run prod:build"
+    "start": "node ./serverhost.js",
+    "heroku-postbuild": "NODE_ENV=production"
   },
   "author": "",
   "license": "ISC",
