--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   },
   "main": "bundle.js",
   "scripts": {
-    "start": "node ./serverhost.js",
+    "start": "concurrently \"nodemon --exec babel-node serverhost.js\" \"webpack --watch\"",
     "heroku-postbuild": "NODE_ENV=production"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
@@ -22,6 +23,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
+    "nodemon": "^1.19.1",
     "npm": "^6.4.1",
     "papaparse": "^4.6.1",
     "react": "^16.2.0",
@@ -37,7 +39,7 @@
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.2",
     "webpack": "^4.34.0",
-    "webpack-cli": "^2.0.10",
+    "webpack-cli": "^2.1.5",
     "webpack-dev-middleware": "^3.4.0"
   }
 }
